📝아키텍처 수정

--- a/docs/아키텍처.md
+++ b/docs/아키텍처.md
@@ -1,4 +1,4 @@
 # 🚀 아키텍처
 
 
-![아키텍처](../images/%EC%95%84%ED%82%A4%ED%85%8D%EC%B3%90.png)
+![아키텍처](/images/%EC%95%84%ED%82%A4%ED%85%8D%EC%B2%98.png)
